v0.1.11
+ add MIT license

v0.1.10
+ implement slice

v0.1.9
+ implement strip, for stripping off the whitespace of strings
+ implement pick, for picking items out of an array

v0.1.8
+ fix stupid mistake

v0.1.7
+ import pack, unpack, crc32 and utf8_encode functions from phpjs
+ move function files into lib

v0.1.6
+ extend now returns the first argument, or a new object if first argument is null

v0.1.5
+ fix bind when second argument is a string

v0.1.4
+ implement extend

v0.1.3
+ call class initializer functions _init rather than _initialize

v0.1.2
+ implement Class

v0.1.1
+ implement isArray
+ implement each
+ implement map

v0.1.0
+ Implement bind
+ Publish on npm as std
