@@ -1,5 +1,6 @@
 v0.1.11
 + add MIT license
++ implement curry
 
 v0.1.10
 + implement slice
